# automacao_olx

./: .gitignore  Dockerfile  app.py  app.spec  data.csv  docker-compose.yml  pyproject.toml  scrapy.cfg
data/: olx_anuncios.db  olx_anuncios.db-info  seen_ads.json
etl_olx/: items.py  middlewares.py  pipelines.py  seen_ads.json
etl_olx/spiders/: olx_car.py
src/etl_olx/: monitor.py  settings.py
src/etl_olx/spiders/: olx_car.py
src/etl_olx/utils/: db.py  email_utils.py
