[tool.poetry]
name = "etl-olx"
version = "0.1.0"
description = ""
authors = ["fmota <fmota.web@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.2.3,<3.0.0"
streamlit = ">=1.44.1,<2.0.0"
scrapy = ">=2.12.0,<3.0.0"
selenium = ">=4.31.0,<5.0.0"
undetected-chromedriver = ">=3.5.5,<4.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
